--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -31,4 +31,7 @@
   background-color: #0083c3;
   padding-top: 10px; }
 
+.header .navbar-nav li a {
+  padding: 9px 30px 9px 15px; }
+
 /*# sourceMappingURL=custom.css.map */
