--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -43,3 +43,13 @@
   background-color: #0083c3;
   padding-top: 10px;
 }
+
+.header {
+  .navbar-nav {
+    li {
+      a {
+        padding: 9px 30px 9px 15px;
+      }
+    }
+  }
+}
