--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -44,4 +44,7 @@
   background: #fff none repeat scroll 0 0;
   padding: 10px; }
 
+.search .input-group {
+  width: 100%; }
+
 /*# sourceMappingURL=custom.css.map */
