fix: Заголовки результатов поиска.

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -50,4 +50,8 @@
 .news-link a {
   color: #555; }
 
+.s-results .inner-results h3 {
+  font-size: 18px;
+  text-transform: none; }
+
 /*# sourceMappingURL=custom.css.map */
