--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -75,3 +75,12 @@
     color: #555;
   }
 }
+
+.s-results {
+  .inner-results {
+    h3 {
+      font-size: 18px;
+      text-transform: none;
+    }
+  }
+}
