fix: изменение css.

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -54,4 +54,10 @@
   font-size: 18px;
   text-transform: none; }
 
+.li a {
+  color: #3498db; }
+
+h3 {
+  margin-top: 15px; }
+
 /*# sourceMappingURL=custom.css.map */
